[tool.poetry]
name = "nanos"
version = "0.1.0"
description = "Collection of small utility-functions"
authors = ["Alex <aleosd@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
mypy = "^1.8.0"
ruff = "^0.1.13"
coverage = "^7.4.0"
pyhamcrest = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # complexity of a function
    "C90",
]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 5

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.coverage.run]
branch = true
source = [
    "nanos"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: not covered",
    "@t.overload"
]
